--- a/pages/form-inscricipcion.html
+++ b/pages/form-inscricipcion.html
@@ -65,18 +65,108 @@
         </header>
         <!-- FIN HEADER -->
 
-        <!-- Seccion contacto -->
+        <!-- pre-inscripcion -->
 
-        <div class="row">
-            <div class="col-12 bg-dark">
-                <div class="my-auto mx-auto form__inscripcion"">
-                    <h1 class=" fw-bold text-uppercase">contacto</h1>
+        <section class="form__pre pt-5 pb-5">
+            <!-- contenedor de formulario -->
+            <div class="row mx-auto form__pre-container">
+                <div class="col">
+                    <div class="row">
+                        <div class="col-12 ps-3">
+                            <h3 class="mt-4">Formulario de pre-inscripcion</h3>
+                            <p class="text-justify">completa tus datos</p>
+                        </div>
+                    </div>
+                    <!-- formulario -->
+                    <form class="row g-3 needs-validation mt-4">
+
+                        <div class="col-md-6">
+                            <label for="validationCustomName" class="form-label">Nombre completo</label>
+                            <input type="text" id="validationCustomName" class="form-control mt-2"
+                                placeholder="Nombre del corredor" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputSurName" class="form-label">Apellidos</label>
+                            <input type="text" id="inputSurName" class="form-control mt-2"
+                                placeholder="Apellido del corredor" aria-label="First name" required>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <label for="FormControlEmail" class="form-label mt-4">Email</label>
+                            <input type="email" class="form-control mt-2" id="FormControlEmail"
+                                placeholder="name@example.com" required>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <label for="exampleFormControlInput1" class="form-label mt-4">Telefono</label>
+                            <input type="text" class="form-control mt-2" id="exampleFormControlInput1"
+                                placeholder="+54**********" required>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <label for="exampleFormControlDocumento" class="form-label mt-4">DNI</label>
+                            <input type="text" class="form-control mt-2" id="exampleFormControlDocumento"
+                                placeholder="24******" required>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <label for="exampleFormControlDocumento" class="form-label mt-4">Fecha de nacimiento</label>
+                            <input type="date" class="form-control mt-2" id="exampleFormControlDocumento"
+                                placeholder="10/01/1990" required>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4">
+                            <label for="inputState" class="form-label mt-4">Distancia</label>
+                            <select id="inputState" class="form-select mt-2" required>
+                                <option selected>21Km</option>
+                                <option>15Km</option>
+                                <option>7Km</option>
+                            </select>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4">
+                            <label for="inputState" class="form-label mt-4">Categoria</label>
+                            <select id="inputState" class="form-select mt-2" required>
+                                <option selected>...</option>
+                                <option>Mas 60</option>
+                                <option>50-59</option>
+                                <option>40-49</option>
+                                <option>30-39</option>
+                                <option>19-29</option>
+                                <option>Hasta 18</option>
+                            </select>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4">
+                            <label for="inputState" class="form-label mt-4">Talle remera</label>
+                            <select id="inputState" class="form-select mt-2" required>
+                                <option selected>...</option>
+                                <option>XXL</option>
+                                <option>XL</option>
+                                <option>L</option>
+                                <option>M</option>
+                                <option>S</option>
+                            </select>
+                        </div>
+
+                        <div class="col-12-auto">
+                            <div class="form-check pt-4 mx-auto align-items-center">
+                                <input class="form-check-input mt-2" type="checkbox" id="gridCheck">
+                                <label class="form-check-label mt-1 ms-2" for="gridCheck">
+                                    Acepto los <a href="#">Terminos y condiciones</a>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-12 mt-4 ">
+                            <button type="reset" class="btn btn-secondary">Restablecer</button>
+                            <button type="submit" class="btn btn-primary ms-2">Enviar</button>
+
+                        </div>
+
+                    </form>
+                    <!-- formulario -->
                 </div>
-
             </div>
-        </div>
+            <!-- contenedor de formulario -->
+        </section>
 
-        <!-- Seccion contacto -->
+        <!-- pre-inscripcion -->
 
         <!-- FOOTER -->
         <footer class="footer">
